2008-03-10  P. Henrique Silva  <henrique@astro.ufsc.br>

	* scripts/chimera: Fix changes on Site controller.
	* scripts/chimera-cam: Ported to new infrastructure and improved.
	* scripts/chimera-console: Ported but not working yet.

	* scripts/chimera-focus:
	* scripts/chimera-tel:
	* scripts/chimera-dome: New scripts.

2008-02-06  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/log.py: Better log formatting with separate
	logger for console and file.

	New function to set Console log level.

	Logging of exceptions using printException facility using custom
	formatter.

	* src/chimera/core/tests/test_log.py: Simple test to confirm log
	capabilities.

2008-01-07  P. Henrique Silva  <henrique@astro.ufsc.br>

	* tests/run-pychecker.sh
	* tests/run-pylint.sh
	* tests/run-tests.sh: Updated runners.

	* TODO
	* TODO.SPRINTS
	* TODO.DONE: Updated TODO's.

	* docs/chimera.epydoc
	* docs/examples/minimo.py
	* docs/examples/client.py
	* docs/examples/proxy.py
	* docs/examples/example.xml
	* docs/examples/server.py: More examples.

	* src/scripts/chimera: Main chimera script updated to new Manager
	model.

	* setup-chimera.sh: Improved to allow source use.

	* src/config/site.xml: Added new host/port example.

2008-01-07  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/util/coord.py: New coord class.
	* src/chimera/util/tests
	* src/chimera/util/tests/test_coord.py
	* src/chimera/util/tests/bsc.dat: Coord class tests with a copy of
	BSC catalog.

	* src/chimera/util/position.py: Future Position class (a pair of Coords).

2008-01-07  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/controllers/siteconfig.py Moved.
	* src/chimera/controllers/chimeramain.py: Moved.

	* src/chimera/controllers/site
	* src/chimera/controllers/site/__init__.py
	* src/chimera/controllers/site/main.py
	* src/chimera/controllers/site/config.py: Updated to new Manager
	model and moved to better place. Config now is Controller specific
	(moved from core).
